--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
   <body>
     <h1> Hello World</h1>
     <h2>welcome to microverse</h2>
+
+    <div id="main" >
+      <h1 id="title">Dr. Norman Borlaug</h1>
+
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
