--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,12 @@
     <div id="main" >
       <h1 id="title">Dr. Norman Borlaug</h1>
 
+
+    </div>
+    <div id="img-div">
+      <img class ="center" id = "image" src="https://www.google.com/search?q=r.+Norman+Borlaug&sxsrf=APq-WBtYc7hI-aoIdmwsz-WCHtOlslD3UQ:1647685869478&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj12c2X_NH2AhVYgP0HHUtAB00Q_AUoAXoECAEQAw&biw=1326&bih=668&dpr=1#imgrc=BZZqpOhLI_CliM" alt="Dr. Norman Borlaug ">
+      <div class ="center"></div><br>
+      <p id ="img-cap" class="font">Dr. Norman Borlaug was an American agronomist </p> 
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
